Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjObjectField.quorum
class Main
    Object v
    v:SetValue()
    action Main
        Test(v)
    end

    action Test(Text var)
    end
end
